# meshmind

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/node_ai/: Cargo.toml
crates/node_ai/src/: lib.rs
crates/node_ai_mock/: Cargo.toml
crates/node_ai_mock/src/: lib.rs
crates/node_ai_ollama/: Cargo.toml
crates/node_ai_ollama/src/: lib.rs
crates/node_api/: Cargo.toml
crates/node_api/src/: lib.rs
crates/node_app/: Cargo.toml
crates/node_app/src/: lib.rs  main.rs
crates/node_app/tests/: e2e_mesh.rs
crates/node_connectors/: Cargo.toml
crates/node_connectors/src/: lib.rs
crates/node_crypto/: Cargo.toml
crates/node_crypto/src/: lib.rs
crates/node_datasets/: Cargo.toml
crates/node_datasets/src/: lib.rs
crates/node_discovery/: Cargo.toml
crates/node_discovery/src/: lib.rs
crates/node_federated/: Cargo.toml
crates/node_federated/src/: lib.rs
crates/node_ingest/: Cargo.toml
crates/node_ingest/src/: lib.rs
crates/node_mesh/: Cargo.toml
crates/node_mesh/src/: consult.rs  discovery.rs  lib.rs  membership.rs  peer_dir.rs  relay_transport.rs  tcp_transport.rs  transport.rs
crates/node_mesh/tests/: two_node_integration.rs
crates/node_policy/: Cargo.toml
crates/node_policy/src/: lib.rs
crates/node_proto/: Cargo.toml  build.rs
crates/node_proto/src/: lib.rs
crates/node_relay/: Cargo.toml
crates/node_relay/src/: lib.rs
crates/node_repl/: Cargo.toml
crates/node_repl/src/: lib.rs
crates/node_research/: Cargo.toml
crates/node_research/src/: lib.rs
crates/node_storage/: Cargo.toml
crates/node_storage/src/: cas.rs  event_log.rs  lib.rs  projector.rs  search.rs  snapshot.rs  sqlite_views.rs
crates/node_trainer/: Cargo.toml
crates/node_trainer/src/: lib.rs
docs/: inference.md  mesh.md  protocol.md  replication.md  research.md  roadmap.md  security.md  spec.md  storage.md  training.md
proto/: cas.proto  common.proto  datasets.proto  events.proto  federated.proto  mesh.proto  relay.proto  replication.proto  research.proto  snapshot.proto  training.proto
seed/public/cases/: seed_cases.json
seed/public/runbooks/: seed_runbooks.json
tools/dev-ca/: README.md  generate_certs.ps1
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: api.js  main.js  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
