[package]
name = "node_ai_ollama"
version.workspace = true
edition.workspace = true

[dependencies]
node_ai = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
