[package]
name = "node_api"
version.workspace = true
edition.workspace = true

[dependencies]
node_proto = { workspace = true }
node_storage = { workspace = true }
node_ai = { workspace = true }
node_policy = { workspace = true }
node_mesh = { workspace = true }
node_discovery = { workspace = true }
node_connectors = { path = "../node_connectors" }
node_ingest = { path = "../node_ingest" }
node_trainer = { workspace = true }
node_datasets = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = "0.5"
http-body-util = "0.1"
node_ai_mock = { path = "../node_ai_mock" }
