[package]
name = "node_connectors"
version.workspace = true
edition.workspace = true

[dependencies]
node_proto = { workspace = true }
node_policy = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kamadak-exif = "0.6"
pdf-extract = "0.10"
docx-rust = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
