[package]
name = "node_crypto"
version.workspace = true
edition.workspace = true

[dependencies]
node_proto = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
