[package]
name = "node_research"
version.workspace = true
edition.workspace = true

[dependencies]
node_proto = { workspace = true }
node_ai = { workspace = true }
node_storage = { workspace = true }
node_policy = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
